# udpsocket

./: CMakeLists.txt  README.md  dealMessage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dealMessage/: CMakeLists.txt  dealMessage.cpp  dealMessage.h
udp/: CMakeLists.txt  UDP.cpp  UDP.h
